# flappy_bird

./: CMakeLists.txt  Makefile  README.md  REPORT.md
src/: main.c
src/interface/: ui.c  ui.h
src/logic/: game_logic.c  game_logic.h
